# Georges-classification

./: README.md  georges_classification.ipynb  pyproject.toml  requirements.txt
